apps/security/overlays/aws-us-west-2-cc-smarsh-perf/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "peer-mtls"
spec:
  mtls:
    mode: STRICT
