apps/security/overlays/aws-us-west-2-cc-smarsh-perf/allow-all-policy-mock.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: mock-allow-access
spec:
  selector:
    matchLabels:
      app.type: mock
  action: ALLOW
  rules:
    - {}
